--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 ---
 
 <div id="hero">
-    <h1>{{ page.title }}</h1>
-    <h2>{{ page.call-to-action }}</h2>
-    <p>{{ page.blurb }}</p>
+    <div id="hero-text">        
+        <h1>{{ page.title }}</h1>
+        <h2>{{ page.call-to-action }}</h2>
+        <p>{{ page.blurb }}</p>
+    </div>
 
 </div>
 
