Some extra navbar styling
Went to showing all links in a row instead of a dropdown menu; and decreased default font-size from 1em to .875em in order to fit the links better, while not being too small and too reliant on a large resolution to not break the links onto a new line below the logo and outside the bar.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ call-to-action: Electronics Tutorials, Projects, and Reviews
 blurb: Electorials is a free website for the electronics community hobbyist.
 ---
 
-<div id="hero">
-    <div id="hero-text">        
+<header id="hero">
+    <div id="hero-text">
         <h1>{{ page.title }}</h1>
         <h2>{{ page.call-to-action }}</h2>
         <p>{{ page.blurb }}</p>
     </div>
-
-</div>
+</header>
 
 <!--
 Consider putting a small sticky banner detailing the summer sale, or any similar announcement. The banner can be similar to the sponsors that Troy Hunt has on his website.
