--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Electorials
+title: Home
 call-to-action: Electronics Tutorials, Projects, and Reviews
 blurb: Electorials is a free website for the electronics community hobbyist.
 ---
 
 <header id="hero">
     <div id="hero-text">
-        <h1>{{ page.title }}</h1>
+        <h1>Electorials</h1>
         <h2>{{ page.call-to-action }}</h2>
         <p>{{ page.blurb }}</p>
     </div>
