Preparing pages for content and later styling
Also redid the styling for the hero image for more uniform styling across all pages.

--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 layout: default
 title: About Electorials
 ---
+
+<h1>{{ page.title }}</h1>
+
 <h3>An introduction to our website</h3>
 
 <p>Electorials was established on the 2nd of March, 2017 as a hobby. Our goal was to provide an easy, convenient project site for the Arduino community to share. We aim to establish as a one-stop destination for any of your electronic tutorial needs over time.<br>
