--- a/reviews/company.html
+++ b/reviews/company.html
@@ -1,6 +1,8 @@
 ---
-layout: default
+layout: grid
 title: Company Reviews
 ---
 
 <h1>{{ page.title }}</h1>
+
+{% include grid-items/company.html %}
