Added individual pages for projects/* and reviews/* and their title text
All pages are now ready for their content. Styling should then come after the content.

--- a/reviews/product/review-029-hebei-12v-10a-peltier-thermoelectric-cooler.html
+++ b/reviews/product/review-029-hebei-12v-10a-peltier-thermoelectric-cooler.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: KY-008 Laser Module
+title: Hebei 12v 10A Peltier Thermoelectric Cooler
 ---
 
 <h1>{{ page.title }}</h1>
