--- a/projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch.html
+++ b/projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: KY-008 Laser Module
+title: TFT LCD Display Module with Resistive Touch
 ---
 
 <h1>{{ page.title }}</h1>
