--- a/reviews/product/review-010-5-inch-hdmi-capacitive-touch-screen-display.html
+++ b/reviews/product/review-010-5-inch-hdmi-capacitive-touch-screen-display.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: KY-008 Laser Module
+title: 5-inch HDMI Capacitive Touch Screen Display
 ---
 
 <h1>{{ page.title }}</h1>
