--- a/reviews/product/review-025-lm117t-33v-low-dropout-voltage-regulator.html
+++ b/reviews/product/review-025-lm117t-33v-low-dropout-voltage-regulator.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: KY-008 Laser Module
+title: LM117T 3.3V Low Dropout Voltage Regulator
 ---
 
 <h1>{{ page.title }}</h1>
