Added project pages' base HTML markup
Pages in projects/* all have their own "base" sectioning for the text based on their category.
Some pages won't use all that I added, but should be enough to add more or remove later.

Will do the other pages in reviews/ later.

--- a/projects/arduino/project-012-ublox-neo-7n-gps-module.html
+++ b/projects/arduino/project-012-ublox-neo-7n-gps-module.html
@@ -4,3 +4,66 @@ title: Ublox Neo-7N GPS Module
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Before starting the project...</h3>
+
+    <p class=credits></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Mounting the circuit</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+	<h3>The code</h3>
+
+	<p></p>
+
+		<figure>
+		    <figcaption>{{ page.title }} Code</figcaption>
+
+		    <pre><code>
+
+			</code></pre>
+		</figure>
+
+		<figure>
+		    <figcaption>{{ page.title }} Code</figcaption>
+
+		    <pre><code>
+
+			</code></pre>
+		</figure>
+
+</section>
+
+<section>
+    <h3>About the code</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
