--- a/projects/raspberry-pi/project-003-5-inch-hdmi-capacitive-touch-screen.html
+++ b/projects/raspberry-pi/project-003-5-inch-hdmi-capacitive-touch-screen.html
@@ -4,3 +4,33 @@ title: 5-inch HDMI Capacitive Touch Screen Display Setup
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
