--- a/projects/arduino/project-020-13-240x240-ips-tft-display-module.html
+++ b/projects/arduino/project-020-13-240x240-ips-tft-display-module.html
@@ -4,3 +4,66 @@ title: 1.3" 240x240 IPS TFT Display Module
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Before starting the project...</h3>
+
+    <p class=credits></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Mounting the circuit</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+	<h3>The code</h3>
+
+	<p></p>
+
+		<figure>
+		    <figcaption>{{ page.title }} Code</figcaption>
+
+		    <pre><code>
+
+			</code></pre>
+		</figure>
+
+		<figure>
+		    <figcaption>{{ page.title }} Code</figcaption>
+
+		    <pre><code>
+
+			</code></pre>
+		</figure>
+
+</section>
+
+<section>
+    <h3>About the code</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
