--- a/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
+++ b/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
@@ -4,3 +4,43 @@ title: DC to DC Automatic Boost Buck Converter 5 - 32V to 1.25 - 20V 5A Setupw
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
