--- a/projects/general-electronics/project-003-led-ligt-control-bluetooth-module-for-ios-android-setup.html
+++ b/projects/general-electronics/project-003-led-ligt-control-bluetooth-module-for-ios-android-setup.html
@@ -4,3 +4,43 @@ title: LED Light Control Bluetooth Module for iOS/Android Setup
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
