--- a/projects/general-electronics/project-004-cadsoft-eagle-to-gerber-conversion-guidelines.html
+++ b/projects/general-electronics/project-004-cadsoft-eagle-to-gerber-conversion-guidelines.html
@@ -4,3 +4,43 @@ title: Cadsoft Eagle (.brd) to Gerber Conversion Guidelines
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
