--- a/projects/general-electronics/project-007-2-bit-binary-counter.html
+++ b/projects/general-electronics/project-007-2-bit-binary-counter.html
@@ -4,3 +4,43 @@ title: 2-Bit Binary Counter
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
