--- a/projects/general-electronics/project-008-xy-mup-usb-dc-dc-buck-boost-power-supply-module-tutorial.html
+++ b/projects/general-electronics/project-008-xy-mup-usb-dc-dc-buck-boost-power-supply-module-tutorial.html
@@ -4,3 +4,43 @@ title: XY-MUP USB DC-DC Buck Boost Power Supply Module Tutorial
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
