--- a/projects/raspberry-pi/project-004-maker-phat-setup.html
+++ b/projects/raspberry-pi/project-004-maker-phat-setup.html
@@ -4,3 +4,33 @@ title: Maker pHAT Setup
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Introduction</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3></h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Conclusion</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
