Review pages' base HTML markup added!
All pages are now ready for their content!

Something will have to be figured out for JLCPCB and Win Source Electronics since they have more pages about them than just a singular review page, and Bittele Electronics only has a shoutout instead of a full review like the other companies.

--- a/reviews/product/review-039-022-microf-50v-ceramic-disc-capacitor.html
+++ b/reviews/product/review-039-022-microf-50v-ceramic-disc-capacitor.html
@@ -4,3 +4,138 @@ title: 0.22 µF 50v Ceramic Disc Capacitor
 ---
 
 <h1>{{ page.title }}</h1>
+
+<section>
+    <h3>Product Specifications</h3>
+
+    <table>
+		<caption>General</caption>
+
+		<tr>
+			<th>Type:</th>
+			<td></td>
+		</tr>
+		<tr>
+			<th>Architecture:</th>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+	</table>
+
+	<table>
+		<caption>Power</caption>
+
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+	</table>
+
+	<table>
+		<caption>Weight and Dimensions</caption>
+
+		<tr>
+			<th>Weight:</th>
+			<td></td>
+		</tr>
+		<tr>
+			<th>Size (L × W × H):</th>
+			<td>××m</td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+	</table>
+</section>
+
+<section>
+    <h3>Pinout</h3>
+
+    <table>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+		</tr>
+	</table>
+</section>
+
+<section>
+    <h3>Product Review</h3>
+
+    <p></p>
+
+    <p></p>
+
+    <p></p>
+</section>
+
+<section>
+    <h3>Datasheet</h3>
+
+	<p></p>
+
+    <p><a href=>Download File</a></p>
+</section>
+
+<section>
+<h3>Sample code</h3>
+
+<p></p>
+
+	<figure>
+	    <figcaption>{{ page.title }} Code</figcaption>
+
+	    <pre><code>
+			<!-- Code goes here. Make sure to delete this comment afterwards. -->
+		</code></pre>
+	</figure>
+
+</section>
+
+<section>
+    <h3>Product Page</h3>
+
+    <img src=>
+
+    <p>Check out the product <a href=>here</a>: <a href=>link</a></p>
+
+    <p></p>
+</section>
+
+<hr>
+
+<div class=discount>
+	<p></p>
+</div>
+
+<hr>
+
+<div class=project-link>
+	<p>Be sure to check out the <a href=>[relevant project page name text] here</a>!</p>
+</div>
+
+<hr>
+
+<div class=contact>
+	<p>Enjoy! Feel free to <a href=/contact>contact us<a> for any inquiries!</p>
+</div>
