--- a/projects/raspberry-pi/project-001-dual-cooling-fan-with-the-thermal-tape-cooling-kit-setup.html
+++ b/projects/raspberry-pi/project-001-dual-cooling-fan-with-the-thermal-tape-cooling-kit-setup.html
@@ -8,7 +8,9 @@ title: Dual Cooling Fan with the Thermal Tape Cooling Kit Setup
 <section>
     <h3>Introduction</h3>
 
-    <p>For any Raspberry Pi, cooling the board is very critical from preventing any potential permanent damage to its system; especially when running high-powered softwares, such as video games, media centres, graphics, etc. A solution to this problem would be cooling, whether it is passive or active cooling. This project involves setting up an active cooling system involving a dual cooling fan and its supporting thermal tape for both the processor chip (Broadcom BCM2837 SoC on RPI3) and the Ethernet chip (SMSC LAN9514 on RPI3) on-board. This cooling fan is compatible for the Raspberry Pi 2 and 3 along with their respective models. These products really help to bring down the Pi's temperature greatly as seen below.</p>
+    <p>For any Raspberry Pi, cooling the board is very critical from preventing any potential permanent damage to its system; especially when running high-powered softwares, such as video games, media centres, graphics, etc. A solution to this problem would be cooling, whether it is passive or active cooling.</p>
+    
+    <p>This project involves setting up an active cooling system involving a dual cooling fan and its supporting thermal tape for both the processor chip (Broadcom BCM2837 SoC on RPI3) and the Ethernet chip (SMSC LAN9514 on RPI3) on-board. This cooling fan is compatible for the Raspberry Pi 2 and 3 along with their respective models. These products really help to bring down the Pi's temperature greatly as seen below.</p>
 
     <img src="/assets/img/ras-pi/run.jpeg" alt="Powered Raspberry Pi 3 Model B with dual fans">
 
@@ -65,9 +67,11 @@ title: Dual Cooling Fan with the Thermal Tape Cooling Kit Setup
     <h3>Setting it up</h3>
 
     <div class="step">
-        <img src="/assets/img/ras-pi/img-3343.jpeg"> <!-- alt="Some kind of mat? Ask about this later." -->
+        <img src="/assets/img/ras-pi/img-3343.jpeg" alt="Thermal tape">
 
-        <p>1. First, you would have to decide which thermal tape you will be using, the thicker thermal tape of the thiner thermal tape. The main purpose of thermal tape is to speed up the heat transfer from the bottom surface to the surface above the tape. So, in this case, the thermal tape will provide an adhesive for the dual fan and speed up the heat transfer to the dual fans for heat dissipation, thus, the thicker piece of tape is better. However, the thermal tape size mainly depends on the space you have on the Raspberry Pi and if there is another space to fit the dual fan with the case or without. <i>The thicker thermal tape will be used as an example for this project.</i></p>
+        <p>1. First, you would have to decide which thermal tape you will be using, the thicker thermal tape of the thiner thermal tape.</p>
+        
+        <p>The main purpose of thermal tape is to speed up the heat transfer from the bottom surface to the surface above the tape. So, in this case, the thermal tape will provide an adhesive for the dual fan and speed up the heat transfer to the dual fans for heat dissipation, thus, the thicker piece of tape is better. However, the thermal tape size mainly depends on the space you have on the Raspberry Pi and if there is another space to fit the dual fan with the case or without. <i>The thicker thermal tape will be used as an example for this project.</i></p>
     </div>
 
     <div class="step">
